# urDiary

./: .gitignore  CMakeLists.txt  aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  app.qrc  img.qrc  install.cmake.in  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  searchdialog.cpp  searchdialog.h  searchdialog.ui  urDiary.pro
